Simplify collector usage